fixed: vars overflow, redudant wrappers; resettings is in the corresponding file now

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,4 +1,22 @@
+$duration: 0.5s;
+
+$days-num: 31;
+$day-shift-pair:
+  "mon" 0,
+  "tue" $cell-space,
+  "wen" $cell-space * 2,
+  "thu" $cell-space * 3,
+  "fri" $cell-space * 4,
+  "sat" $cell-space * 5,
+  "sun" $cell-space * 6;
+
 .calendar {
+  display: flex;
+  max-width: $max-width;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: $cell-gap;
+
   &__day {
     display: flex;
     justify-content: center;
@@ -14,7 +32,7 @@
       background-color: $color-pink;
       cursor: pointer;
 
-      transform: translateY(-$cell-y-offset);
+      transform: translateY(-20px);
     }
   }
 
