--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,15 +1,8 @@
 .page {
-  &__body {
+  &__content {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-
-  &__content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: $cell-gap;
-    max-width: $max-width;
-    margin-top: 20vh;
+    margin: 15vh auto;
   }
 }
