--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -6,7 +6,3 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
-
-body {
-  margin: 0;
-}
